commiting before change to resolve issue with background image not visible after compare function

--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,4 @@
   float:left;
   border-radius: 20px;
   background-image: url("../img/face.png");
-  background-color: green;
 }
